Bug 467143 - No icons by default on non-KDE
Summary: No icons by default on non-KDE
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-10 09:59 UTC by Hugo Osvaldo Barrera
Modified: 2023-05-21 01:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Statusbar screenshot (17.85 KB, image/png)
2023-03-10 09:59 UTC, Hugo Osvaldo Barrera
Details
Screenshot of a toot (29.74 KB, image/png)
2023-03-10 10:00 UTC, Hugo Osvaldo Barrera
Details
Screenshot of hover menu on message in conversation (117.80 KB, image/png)
2023-03-10 10:03 UTC, Hugo Osvaldo Barrera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hugo Osvaldo Barrera 2023-03-10 09:59:58 UTC
Created attachment 157168 [details]
Statusbar screenshot

SUMMARY

I'm running tokodon on a non-KDE setup (specifically, on swaywm, a standalone compositor).

Icons are not rendering. It might be something with my setup. I only have one other Qt application (neochat, also QML) and it has the same issue. I just don't know exactly where these applications read icons though.

I have the following icon-related packages installed on this host:

arc-icon-theme
kiconthemes
adwaita-icon-theme
moka-icon-theme
hicolor-icon-theme

I'm not trying to rice, or be picky or have specific icons -- I mostly want ANY readable icons to render.

STEPS TO REPRODUCE

The easiest way to repro this is probably to install an Arch or Alpiine VM, install sway and tokodon and just run that.

It's a non-trivial amount of effort, so I'm happy to provide further debugging information.

OBSERVED RESULT

Out-of-the-box, no icons are rendered.


EXPECTED RESULT

Out-of-the-box, icons should render OR some clear indication of what's missing.

SOFTWARE/OS VERSIONS
Linux Plasma: Alpine Linux, swaymw (standalone wayland compositor)
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Hugo Osvaldo Barrera 2023-03-10 10:00:19 UTC
Created attachment 157169 [details]
Screenshot of a toot
Comment 2 Hugo Osvaldo Barrera 2023-03-10 10:03:22 UTC
Created attachment 157170 [details]
Screenshot of hover menu on message in conversation
Comment 3 Hugo Osvaldo Barrera 2023-03-10 10:21:58 UTC
Suggestions online indicate that setting `QT_QPA_PLATFORMTHEME=gtk` would make Qt use the same icon theme as GTK, but setting that variable does not show any improvements.
Comment 4 Bug Janitor Service 2023-05-14 01:00:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/tokodon/-/merge_requests/228
Comment 5 Joshua Goins 2023-05-21 01:47:36 UTC
Git commit acdc7adfd152cef7834f6aa9711e27fa23229cfb by Joshua Goins.
Committed on 21/05/2023 at 01:47.
Pushed by redstrate into branch 'master'.

Set the custom icon theme to the main icon theme, not the fallback

This seems to fix the icons in GNOME, and possibly more non-KDE
environments.

M  +2    -2    src/main.cpp

https://invent.kde.org/network/tokodon/commit/acdc7adfd152cef7834f6aa9711e27fa23229cfb