Set the custom icon theme to the main icon theme, not the fallback

This seems to fix the icons in GNOME, and possibly more non-KDE
environments.

BUG: 467143